plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'jacoco'
}

group = 'com.lolpowerranks'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// swagger-ui
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// dynamodb
	implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.11.64'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

tasks.register("bootRunLocal") {
	group = "application"
	description = "Runs the Spring boot application with local configuration"
	doFirst {
		tasks.bootRun.configure {
			systemProperty("spring.profiles.active", "local")
		}
	}
	finalizedBy("bootRun")
}
